--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="container">
             <img src="/images/WhatsApp Image 2024-07-13 at 11.54.55_26af93b3.jpg" alt="Snow">
             <div class="top-left">
-                <img src="/images/logo.svg" alt="logo">
+                <img src="logo.svg" alt="logo">
             </div>
             <div class="top-right">
                 <ul class="navigation">
@@ -38,13 +38,13 @@
             <p class="more">LEARN MORE</p>
         </div>
         <div class="picture">
-            <img src="/images/desktop/image-transform.jpg" alt="">
+            <img src="image-transform.jpg" alt="">
         </div>
     </section>
   
     <section class="textimage">
         <div class="picture">
-            <img src="/images/desktop/image-stand-out.jpg" alt="">
+            <img src="image-stand-out.jpg" alt="">
         </div>
         <div class="description">
             <p class="intro">Stand out to the right audience</p>
@@ -56,14 +56,14 @@
 
     <section class="textimage">
         <div class="leftimg">
-            <img src="/images/desktop/image-graphic-design.jpg" alt="">
+            <img src="desktop/image-graphic-design.jpg" alt="">
             <div class="text">
                 <p class="toptext">Graphic Design</p>
                 <p class="lowtext">Great design makes you memorable. We deliver artwork that underscore your brand message and capture potential clients' attention.</p>
             </div>
             </div>
         <div class="rightimg">
-            <img src="/images/desktop/image-photography.jpg" alt="">
+            <img src="desktop/image-photography.jpg" alt="">
             <p class="toptext">Photography</p>
             <p class="lowtext">Increase your credibility by getting the most stunning, high-quality photos that improve your business image.</p>
         </div>
@@ -73,19 +73,19 @@
         <p>CLIENT TESTIMONIALS</p>
         <div class="clientcontainer">
             <div class="clients">
-                <img src="/images/image-emily.jpg" alt="">
+                <img src="image-emily.jpg" alt="">
                 <p class="feedback"> We put our trust in Sunnyside and they delivered, making sure our needs were met and deadlines were always hit.</p>
                 <p class="name">Emily R.</p>
                 <p class="designation">Marketing Director</p>
             </div>
             <div class="clients">
-                <img src="/images/image-thomas.jpg" alt="">
+                <img src="image-thomas.jpg" alt="">
                 <p class="feedback"> We put our trust in Sunnyside and they delivered, making sure our needs were met and deadlines were always hit.</p>
                 <p class="name">Thomas S.</p>
                 <p class="designation">Chief Operating Officer</p>
             </div>
             <div class="clients">
-                <img src="/images/image-jennie.jpg" alt="">
+                <img src="image-jennie.jpg" alt="">
                 <p class="feedback"> We put our trust in Sunnyside and they delivered, making sure our needs were met and deadlines were always hit.</p>
                 <p class="name">Jennie F.</p>
                 <p class="designation">Business Owner</p>
@@ -94,10 +94,10 @@
     </section>
 
     <section class="fourimages">
-        <img src="/images/desktop/image-gallery-milkbottles.jpg" alt="">
-        <img src="/images/desktop/image-gallery-orange.jpg" alt="">
-        <img src="/images/desktop/image-gallery-cone.jpg" alt="">
-        <img src="/images/desktop/image-gallery-sugarcubes.jpg" alt="">
+        <img src="image-gallery-milkbottles.jpg" alt="">
+        <img src="image-gallery-orange.jpg" alt="">
+        <img src="image-gallery-cone.jpg" alt="">
+        <img src="image-gallery-sugarcubes.jpg" alt="">
     </section>
 
     <section class="sarthak">
@@ -113,10 +113,10 @@
         </ul>
         </div>
         <div class="icons">
-            <img src="/images/icon-facebook.svg" alt="">
-            <img src="/images/icon-instagram.svg" alt="">
-            <img src="/images/icon-twitter.svg" alt="">
-            <img src="/images/icon-pinterest.svg" alt="">
+            <img src="icon-facebook.svg" alt="">
+            <img src="icon-instagram.svg" alt="">
+            <img src="icon-twitter.svg" alt="">
+            <img src="icon-pinterest.svg" alt="">
         </div>
     </section>
 </body>
