--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <section class="header">
         <div class="container">
-            <img src="/images/WhatsApp Image 2024-07-13 at 11.54.55_26af93b3.jpg" alt="Snow">
+            <img src="WhatsApp Image 2024-07-13 at 11.54.55_26af93b3.jpg" alt="Snow">
             <div class="top-left">
                 <img src="logo.svg" alt="logo">
             </div>
@@ -63,7 +63,7 @@
             </div>
             </div>
         <div class="rightimg">
-            <img src="desktop/image-photography.jpg" alt="">
+            <img src="image-photography.jpg" alt="">
             <p class="toptext">Photography</p>
             <p class="lowtext">Increase your credibility by getting the most stunning, high-quality photos that improve your business image.</p>
         </div>
@@ -102,7 +102,6 @@
 
     <section class="sarthak">
         <div class="logo2">
-        <!-- <img src="/images/logo.svg" alt=""> -->
          <h1>Sunnyside</h1>
         </div>
         <div class="lists2">
