--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
     <section class="textimage">
         <div class="leftimg">
-            <img src="desktop/image-graphic-design.jpg" alt="">
+            <img src="image-graphic-design.jpg" alt="">
             <div class="text">
                 <p class="toptext">Graphic Design</p>
                 <p class="lowtext">Great design makes you memorable. We deliver artwork that underscore your brand message and capture potential clients' attention.</p>
